add ui for changing title and new doc.

--- a/ps05/CollaboratorAndroid/res/values/strings.xml
+++ b/ps05/CollaboratorAndroid/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="hello">Hello World, CollaboratorAndroidActivity!</string>
     <string name="app_name">Collaborator</string>
+    <string name="newdoc">New Document</string>
     <string name="refresh">Refresh</string>
     <string name="lock">Lock Document</string>
     <string name="save">Save Document</string>
